fix: remove blue highlight click on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,19 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
   html, body {
     @apply min-h-full;
+  }
+
+  button, textarea, input, select, a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+   user-select: none;
   }
 }
